syntax = "proto3";

import "google/protobuf/timestamp.proto";

package posts;

service Posts {
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}

// -------------- COMMON --------------

message Post {
    string id = 1;
    string user_id = 2;
    string title = 3;
    string description = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// --------------- Messages ---------------

message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    Post post = 1;
}

// ------------------------------

message GetPostsRequest {}

message GetPostsResponse {
    repeated Post posts = 1;
}

// ------------------------------

message CreatePostRequest {
    string user_id = 1;
    string title = 2;
    string description = 3;
}

message CreatePostResponse {
    Post post = 1;
}

// ------------------------------

message UpdatePostRequest {
    string id = 1;
    string title = 2;
    string description = 3;
}

message UpdatePostResponse {
    Post post = 1;
}

// ------------------------------

message DeletePostRequest {
    string id = 1;
}

message DeletePostResponse {
    Post post = 1;
}